# polymenu

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md  Trunk.toml  default-config.toml  flake.nix  rust-toolchain.toml
.github/workflows/: release.yaml
app/: Cargo.toml
app/src/: callback.rs  command.rs  config.rs  dev_server.rs  develop.rs  expansion.rs  gui.rs  io.rs  item.rs  item_source.rs  keybinds.rs  main.rs  matcher.rs  server.rs  shutdown.rs
common/: Cargo.toml
common/src/: config.rs  image.rs  item.rs  keybinds.rs  lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/app-launcher/: README.md  macos.sh
gallery/dmenu/: README.md  config.toml
gallery/dmenu/scripts/linux/: build-cache.sh  launch.sh
gallery/dmenu/scripts/macos/: build-cache.nu  launch.sh  macos-desktop.nu  render-icon.applescript
gallery/dmenu/src/: .npmrc  .pnp.cjs  package.json  pnpm-lock.yaml
gallery/dmenu/src/src/: App.svelte  common.ts  globalState.ts  main.ts
gallery/dmenu/src/src/lib/: FallbackIcon.svelte  FallbackIcon.svlete  Item.svelte
gallery/fuzzy-finder/: config.toml  countries.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
gallery/fuzzy-finder/src/: App.svelte  main.ts
gallery/fuzzy-finder/src/lib/: Item.svelte  SearchIcon.svelte
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
styles/: default.css  dmenu.css
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: callback.rs  item_source.rs  main.rs
ts-client/: .pnp.cjs  package.json  pnpm-lock.yaml
ts-client/src/: util.ts
typescript/: README.md  tsconfig.json
typescript/src/: index.ts  keymap.ts
ui/: Cargo.toml  index.html  reset.css  styles.css
ui/src/: app.rs  backend.rs  item.rs  keybinds.rs  main.rs  matcher.rs  resize.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.svelte  AppMain.svelte  app.svelte.ts  keybinds.ts  keymap.svelte.ts  state.d.ts  state.svelte.ts  util.ts
web/src/lib/: Item.svelte
