[package]
name = "polymenu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
killport = "1.1.0"
once_cell = "1.21.3"
polymenu-derive = { path = "../derive" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = { version = "3.1.1", features = ["path"] }
tao = "0.34.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.8.23"
tower-http = { version = "0.6.6", features = [
  "compression-br",
  "fs",
  "compression-gzip",
  "compression-deflate",
  "trace",
] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wry = { version = "0.53.4", features = [
  "transparent",
  "devtools",
  "fullscreen",
] }
