[package]
name = "polymenu-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polymenu-derive = { path = "../derive" }
clap = { version = "4.3.10", features = ["derive"] }
leptos = { workspace = true }
serde = { workspace = true }
tauri-icns = "0.1.0"
base64 = "0.21.2"
