[package]
name = "polymenu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
polymenu-common = { path = "../common" }
tauri = { version = "1.3", features = ["devtools", "macos-private-api", "process-exit", "shell-open", "window-set-size"] }
serde_json = "1.0"
serde = { workspace = true }
toml = "0.7.6"
csv = "1.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
